# mps2gui

./: CMakeLists.txt  README.md  cwpack_config.h  cwpack_internals.h  cwpack_utils.h  electabuzz_client.c  electabuzz_client_helpers.c  electabuzz_common.c  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  uart-escape.c
CMake/: Findnng.cmake
docs/: HOWTO_v1_0.docx  HOWTO_v1_0.odt  compile_notes.txt
inc/: chart.h  chartview.h  commands.h  electabuzz_common.h  mainwindow.h  menu.h  mpswizard.h  response_parser.h  selectwindow.h  variables_list.h  wizardmps.h
lib/: cwpack_utils.c  electabuzz_client.c  electabuzz_client_helpers.c  uart-escape.c
src/: chart.cpp  chartview.cpp  cwpack.c  cwpack.h  electabuzz_client.h  electabuzz_client_helpers.h  electabuzz_common.c  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mpswizard.cpp  response_parser.cpp  selectwindow.cpp  selectwindow.ui  shim_window.cpp  uart-escape.c  uart-escape.h  variables_list.cpp  wizardmps.cpp
tools/: post_build.bat
